# ieum-mobile-web

./: .gitignore  404.html  README.md  index.html  index.txt
.github/workflows/: ci.yml
404/: index.html
_next/static/0yghIecVPRFfStChm0hV-/: _buildManifest.js
_next/static/chunks/: 255-fc948106e1ddd722.js  main-e2080df6900d39dd.js  main-f58c4fb02da1f519.js  webpack-713dc5614e1fd8eb.js
_next/static/css/: 66da9233ac0778f6.css  f3531b4d6329363c.css
admin/: index.html  index.txt
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: auth.py  db.py  main.py  models.py  offers.py  schemas.py  security.py
apps/api/app/state_machines/: workflow.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260715_01_initial.py  20260715_02_simple_login.py
apps/api/scripts/: seed_demo.py
apps/api/tests/: conftest.py  test_auth_security.py  test_health.py  test_offer_permissions.py  test_offer_workflow.py  test_session_contract.py  test_state_machines.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  session.ts
apps/web/tests/: admin.test.tsx  api.test.ts  donor.test.tsx  home.test.tsx  login.test.tsx  member.test.tsx  session.test.ts  setup.ts
docs/domain/: acceptance-scenarios.md  offer-workflow-api.md  permissions-matrix.md  phase1-scope.md  state-machines.md
donor/: index.html  index.txt
infra/: README.md
infra/ci/: github-actions-ci.yml.example
login/: index.html  index.txt
member/: index.html  index.txt
(+23 files in other folders)
