[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ieum-api"
version = "0.1.0"
description = "이음 모바일웹 업무 API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "PyJWT>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.7,<3",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
